nf notation fixing

--- a/nextflow/nextflow.config
+++ b/nextflow/nextflow.config
@@ -1,6 +1,5 @@
 report.overwrite = true // allows the report to be overwritten
 dag.overwrite = true    // allows the dependency graph to be overwritten
-executor.queueGlobalStatus = true
 
 profiles {
     
@@ -12,10 +11,8 @@ profiles {
     
     slurm {
 
-        executor {
-            name = 'slurm'
-            queueGlobalStatus = true
-            }
+        executor.name = 'slurm'
+        executor.queueGlobalStatus = true
 
         process.executor = 'slurm'
         process.memory = '2GB'
